--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zometool Tetrahedra Challenge</title>
+  <title>Zometool Triangle Explorer</title>
   
   <!-- Enable the vzome-viewer custom element -->
   <script type="module" src="https://www.vzome.com/modules/vzome-viewer.js"></script>
@@ -40,11 +40,10 @@
         Zometool Tetrahedra Challenge Solution
       </h1>    
       <p>
-        Select a row in the table to see the tetrahedron.  Rows marked with an asterisk (*)
-        represent chiral tetrahedra; they have both left-handed and right-handed forms.
+        Select a row in the table to see the triangle.
       </p>
       <p>
-        <a href="https://github.com/vZome/zome-tetras/">Page Source</a>                                                                                  
+        <a href="https://github.com/pdmclean/zome-tetras-triangles">Page Source</a>                                                                                  
       </p>
     </div>
 
@@ -52,8 +51,13 @@
       <table id="partsTable">
         <thead>
           <tr id="current" data-id="0">
-            <td class="ident done">vZome</td>
-            <td class="sidess">4</td>
+           <td class="ident done">vZome</td>
+           <td class="t">4</td>
+           <td class="sides">0</td>
+           <td class="angles">0</td>
+           <td class="plane">0</td>
+           <td class="angle">0</td>
+
           </tr>
           <tr>
             <td colspan="11">
