--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="main-grid">
     <div class="intro">
       <h1>
-        Zometool Tetrahedra Challenge Solution
+        Zometool Triangle Explorer
       </h1>    
       <p>
         Select a row in the table to see the triangle.
@@ -83,6 +83,7 @@
       <vzome-viewer id="viewer" src="vZomeLogo.vZome" />
     </div>
   </div>
+  <img src="./test.svg" alt="here" title="here">
   
 </body>
 </html>
